<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">There are no products to display at the moment.</string>
    <string name="empty_view_subtitle_text">Get started by pressing the Add Product button!</string>
    <string name="product_name">Name</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_price">Price</string>
    <string name="product_supplier">Supplier</string>
    <string name="editor_insert_product_failed">Error</string>
    <string name="editor_insert_product_successful">Product added!</string>
    <string name="add_product">Add Product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Error deleting the product!</string>
    <string name="editor_delete_product_successful">Product successfully deleted!</string>
    <string name="user_add_quantity">"Please enter the quantity you wish to add."</string>
    <string name="user_subtract_quantity">"Please enter the quantity you wish to subtract."</string>
    <string name="editor_update_product_failed">Error in updating the product!</string>
    <string name="editor_update_product_successful">Product successfully updated!</string>
    <string name="negative_quantity">Quantity cannot become negative!</string>
    <string name="add_image">Add Image</string>
</resources>
