<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/input_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/input_product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/input_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_supplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_supplier"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/input_product_supplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/add_image"
            android:text="@string/add_image"
            android:layout_height="wrap_content"
            android:layout_width="176dp" />

        <Button
            android:id="@+id/add_product"
            android:text="@string/add_product"
            android:layout_height="wrap_content"
            android:layout_width="176dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>


</LinearLayout>
